# mir

nfs/opencvwork/: .opencv001.cpp.swp
nfs/opencvwork/nanopione/: Makefile  S5P4418.c  S5P4418.h  common.h  main  main.c  sonar.c
nfs/opencvwork/nanopione/usart/: usart.cpp
nfs/opencvwork/opencv_class1/: .goutputstream-GB50KY  ReadMe.txt  faceRecognition.h  main  opencv_class1.cpp  opencv_class1.cpp~  opencv_class1.opensdf  opencv_class1.sln  opencv_class1.vcxproj  opencv_class1.vcxproj.filters  send.h  stdafx.cpp  test  test.c  usart  usart.c
nfs/opencvwork/opencv_class1/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  opencv_class1.lastbuildstate  opencv_class1.pch  opencv_class1_manifest.rc  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
nfs/opencvwork/opencv_class1/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opencv_class1.lastbuildstate  opencv_class1.pch
nfs/opencvwork/opencv_class1/ipch/opencv_class1-6ed1ebbc/: opencv_class1-13864bd.ipch
nfs/opencvwork/opencv_class1/src/faceRecognition/: faceRecognition.cpp  faceRecognition.h
nfs/opencvwork/opencvdream1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
nfs/opencvwork/opencvdream1/cardrive/: cardrive.cpp  cardrive.hpp
nfs/opencvwork/opencvdream1/lib/: common.cpp
nfs/opencvwork/opencvdream1/lib/.deps/: config.Po  filectl.Po  gpio.Po  gpio_sensor.Po  hmc5883.Po  iio.Po  mcp23017.Po  oled.Po  pcf8574.Po  pwm.Po  spi.Po  w1.Po
nfs/opencvwork/opencvdream1/lib/includes/: libfahw.h
nfs/opencvwork/opencvdream1/line_detection/: line_detection.cpp  line_detection.h
nfs/opencvwork/opencvdream1/nanopi/: GPIO.c  GPIO.h  Makefile  S5P4418.c  S5P4418.h
nfs/opencvwork/opencvdream1/sonar/: sonar.cpp  sonar.h
nfs/opencvwork/opencvdream1/user/: main.cpp
nfs/opencvwork/opencvdream2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main
nfs/opencvwork/opencvdream2/cardrive/: cardrive.cpp  cardrive.hpp
nfs/opencvwork/opencvdream2/featureMatch/: featureMatch.cpp
nfs/opencvwork/opencvdream2/lib/: common.cpp  filectl.cpp  gpio.cpp  pwm.cpp
nfs/opencvwork/opencvdream2/lib/.deps/: adxl34x.Po  bmp180.Po  common.Po  i2c.Po  led.Po  pcf8591.Po  rotary_encoder.Po
nfs/opencvwork/opencvdream2/line_detection/: line_detection.cpp  line_detection.h
nfs/opencvwork/opencvdream2/sonar/: sonar.cpp  sonar.h
nfs/opencvwork/opencvdream2/tracking/: featuretracking.cpp  featuretracking.hpp
nfs/opencvwork/opencvdream2/usart/: usart.cpp
nfs/opencvwork/opencvdream2/user/: main.cpp
nfs/opencvwork/opencvdream2/videotransmission/: SocketVideoserver.cpp  SocketVideoserver.hpp
nfs/opencvwork/opencvpro1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  opencv002  opencv002.cpp
nfs/opencvwork/opencvpro1/usart/: usart.h
(+50 files in other folders)
